--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.23.0",
     "discord.js": "^12.5.1",
+    "dotenv": "^16.0.1",
     "images-scraper": "^6.4.0",
     "mongodb": "^4.1.2",
     "opusscript": "0.0.8",
