--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.23.0",
+    "canvass": "^0.1.0",
     "discord.js": "^12.5.1",
     "dotenv": "^16.0.1",
     "images-scraper": "^6.4.0",
