--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "images-scraper": "^6.4.0",
     "mongodb": "^4.7.0",
     "opusscript": "0.0.8",
+    "request": "^2.88.2",
     "yt-search": "^2.10.3",
     "ytdl-core": "^4.11.0"
   }
