--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "canvass": "^0.1.0",
     "discord.js": "^12.5.3",
     "dotenv": "^16.0.1",
+    "file-type": "^17.1.2",
+    "gm": "^1.23.1",
+    "image-type": "^4.1.0",
     "images-scraper": "^6.4.0",
     "mongodb": "^4.7.0",
     "opusscript": "0.0.8",
