--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,12 @@ error_log.txt
 **/.DS_Store 
 assets/counter.json
 assets/counter.txt
+
+#image asset files that might be generated while using the image Magik pipeline
+**/.jpg
+**/.png 
+**/.obj 
+
+
+
+
