--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "request": "^2.88.2",
     "tempy": "^3.0.0",
     "yt-search": "^2.10.3",
-    "ytdl-core": "^4.11.0"
+    "ytdl-core": "^4.11.0",
+    "ytdl-core-discord": "^1.3.1"
   }
 }
