--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "canvass": "^0.1.0",
     "discord.js": "^12.5.3",
     "dotenv": "^16.0.1",
+    "ffmpeg-static": "^4.4.1",
     "file-type": "^17.1.2",
     "gm": "^1.23.1",
     "image-type": "^4.1.0",
@@ -26,6 +27,7 @@
     "tempy": "^3.0.0",
     "yt-search": "^2.10.3",
     "ytdl-core": "^4.11.0",
-    "ytdl-core-discord": "^1.3.1"
+    "ytdl-core-discord": "^1.3.1",
+    "ytpl": "^2.3.0"
   }
 }
