--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ error_log.txt
 **/.DS_Store 
 assets/counter.json
 assets/counter.txt
+assets/conversation.json
+assets/music_queue.json 
 
 #image asset files that might be generated while using the image Magik pipeline
 **/.jpg
