--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "image-type": "^4.1.0",
     "images-scraper": "^6.4.0",
     "mongodb": "^4.7.0",
+    "natural": "^5.2.2",
     "node-cron": "^3.0.1",
     "opusscript": "0.0.8",
     "request": "^2.88.2",
