--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "request": "^2.88.2",
     "tempy": "^3.0.0",
     "yt-search": "^2.10.3",
+    "ytdl-core": "github:fent/node-ytdl-core",
     "ytdl-core-discord": "^1.3.1",
     "ytpl": "^2.3.0"
   }
