music player is now hosted by DiscTube, Discord.js v14 support

--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "author": "Eli Reynolds",
   "license": "ISC",
   "dependencies": {
+    "13": "^0.0.0",
+    "@discordjs/opus": "^0.8.0",
+    "@discordjs/voice": "^0.11.0",
     "axios": "^0.23.0",
     "canvass": "^0.1.0",
     "cleverbot-free": "^1.1.11",
     "discord.js": "^14.5.0",
+    "distube": "^4.0.4",
     "dotenv": "^16.0.1",
     "ffmpeg-static": "^4.4.1",
     "file-type": "^17.1.2",
@@ -26,8 +30,10 @@
     "natural": "^5.2.3",
     "node-cron": "^3.0.1",
     "node-server-manager": "^0.0.1",
+    "node-stopwatch": "^0.0.1",
     "opusscript": "0.0.8",
     "request": "^2.88.2",
+    "stable": "^0.1.8",
     "tempy": "^3.0.0",
     "yt-search": "^2.10.3",
     "ytdl-core": "github:fent/node-ytdl-core",
