--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "13": "^0.0.0",
     "@discordjs/opus": "^0.8.0",
     "@discordjs/voice": "^0.11.0",
+    "@distube/yt-dlp": "^1.1.3",
+    "@distube/ytdl-core": "^4.11.7",
     "axios": "^0.23.0",
     "canvass": "^0.1.0",
     "cleverbot-free": "^1.1.11",
@@ -37,6 +39,7 @@
     "string-progressbar": "^1.0.4",
     "tempy": "^3.0.0",
     "yt-search": "^2.10.3",
+    "ytdl": "^1.4.1",
     "ytdl-core": "github:fent/node-ytdl-core",
     "ytdl-core-discord": "^1.3.1",
     "ytpl": "^2.3.0"
