--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "opusscript": "0.0.8",
         "prism-media": "^1.3.5",
         "request": "^2.88.2",
+        "sentiment": "^5.0.2",
         "stable": "^0.1.8",
         "string-progressbar": "^1.0.4",
         "tempy": "^3.0.0",
