--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "ytdl": "^1.4.1",
         "ytdl-core": "github:fent/node-ytdl-core",
         "ytdl-core-discord": "^1.3.1",
-        "ytpl": "^2.3.0"
+        "ytpl": "^2.3.0",
+        "ytsr": "^3.8.2"
     }
 }
