--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "stupid godawful waste of time ",
     "main": "main.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "initialize": "node registerSlashCommands.js",
+        "start": "node main.js"
     },
     "keywords": [
         "fart"
