--- a/.gitignore
+++ b/.gitignore
@@ -15,13 +15,18 @@ assets/conversation.json
 assets/scores.json
 notes.txt
 
+
+
+
 #image asset files that might be generated while using the image Magik pipeline
 **/.jpg
+**/.dockerignore
+**/Dockerfile
 **/.png 
 **/.obj 
 **/.gif 
 **/.mp4
-**/.mp3 
+**/.mp3  
 **/.wav
 **/.flac
 **/.ogg
