--- a/package.json
+++ b/package.json
@@ -14,38 +14,22 @@
     "author": "Eli Reynolds",
     "license": "ISC",
     "dependencies": {
-        "13": "^0.0.0",
         "@discordjs/opus": "^0.8.0",
         "@discordjs/voice": "^0.15.0",
-        "@distube/ytdl-core": "^4.11.7",
         "axios": "^0.23.0",
         "canvass": "^0.1.0",
+        "cheerio": "^1.0.0-rc.12",
+        "chrono-node": "^2.6.5",
         "discord.js": "^14.13.0",
         "distube": "^4.0.4",
         "dotenv": "^16.0.1",
-        "ffmpeg-static": "^4.4.1",
         "file-type": "^17.1.2",
         "gm": "^1.23.1",
         "image-type": "^4.1.0",
-        "images-scraper": "^6.4.0",
-        "node-cron": "^3.0.1",
-        "node-server-manager": "^0.0.1",
-        "node-stopwatch": "^0.0.1",
-        "opusscript": "0.0.8",
-        "prism-media": "^1.3.5",
         "request": "^2.88.2",
-        "sentiment": "^5.0.2",
-        "stable": "^0.1.8",
         "string-progressbar": "^1.0.4",
-        "tempy": "^3.0.0",
-        "tiny-typed-emitter": "^2.1.0",
-        "tslib": "^2.5.0",
-        "undici": "^5.21.0",
-        "yt-search": "^2.10.3",
         "ytdl": "^1.4.1",
-        "ytdl-core": "github:fent/node-ytdl-core",
-        "ytdl-core-discord": "^1.3.1",
-        "ytpl": "^2.3.0",
-        "ytsr": "^3.8.2"
+        "ytdl-core": "^4.11.5",
+        "ytsr": "^3.8.4"
     }
 }
