--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
         "discord.js": "^14.13.0",
         "distube": "^4.0.4",
         "dotenv": "^16.0.1",
+        "express": "^4.18.2",
         "file-type": "^17.1.2",
         "gm": "^1.23.1",
         "image-type": "^4.1.0",
+        "lastfmapi": "^0.1.1",
         "request": "^2.88.2",
         "string-progressbar": "^1.0.4",
         "ytdl": "^1.4.1",
