--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "file-type": "^17.1.2",
         "gm": "^1.23.1",
         "image-type": "^4.1.0",
+        "opusscript": "^0.0.8",
         "request": "^2.88.2",
         "string-progressbar": "^1.0.4",
         "ytdl": "^1.4.1",
