--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "@discordjs/opus": "^0.8.0",
         "@discordjs/voice": "^0.15.0",
+        "@distube/spotify": "^1.5.1",
         "axios": "^0.23.0",
         "canvass": "^0.1.0",
         "cheerio": "^1.0.0-rc.12",
@@ -24,10 +25,13 @@
         "discord.js": "^14.13.0",
         "distube": "^4.0.4",
         "dotenv": "^16.0.1",
+        "express": "^4.18.2",
         "file-type": "^17.1.2",
         "gm": "^1.23.1",
         "image-type": "^4.1.0",
+        "install": "^0.13.0",
         "lastfmapi": "^0.1.1",
+        "npm": "^10.1.0",
         "opusscript": "^0.0.8",
         "request": "^2.88.2",
         "string-progressbar": "^1.0.4",
