--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "@discordjs/opus": "^0.8.0",
         "@discordjs/voice": "^0.15.0",
+        "@distube/soundcloud": "^1.3.3",
         "@distube/spotify": "^1.5.1",
         "axios": "^0.23.0",
         "canvass": "^0.1.0",
