--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
         "@discordjs/voice": "^0.15.0",
         "@distube/soundcloud": "^1.3.3",
         "@distube/spotify": "^1.5.1",
+        "@distube/ytdl-core": "^4.13.1",
         "axios": "^0.23.0",
+        "body-parser": "^1.20.2",
         "canvass": "^0.1.0",
         "cheerio": "^1.0.0-rc.12",
         "chrono-node": "^2.6.5",
@@ -26,6 +28,7 @@
         "discord.js": "^14.13.0",
         "distube": "^4.0.4",
         "dotenv": "^16.0.1",
+        "express": "^4.18.2",
         "file-type": "^17.1.2",
         "gm": "^1.23.1",
         "image-type": "^4.1.0",
@@ -38,5 +41,8 @@
         "ytdl": "^1.4.1",
         "ytdl-core": "^4.11.5",
         "ytsr": "^3.8.4"
+    },
+    "devDependencies": {
+        "typescript": "^5.2.2"
     }
 }
