--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "discordbot",
+    "name": "flutterbot",
     "version": "1.0.0",
-    "description": "stupid godawful waste of time ",
-    "main": "main.js",
+    "description": "Shy robotic pegasus discord bot for utility, security, and most importantly; fun",
+    "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "initialize": "node registerSlashCommands.js",
-        "start": "node main.js"
+        "start": "node index.js"
     },
     "keywords": [
         "fart"
@@ -32,7 +32,6 @@
         "file-type": "^17.1.2",
         "gm": "^1.23.1",
         "image-type": "^4.1.0",
-        "install": "^0.13.0",
         "lastfmapi": "^0.1.1",
         "npm": "^10.1.0",
         "opusscript": "^0.0.8",
@@ -41,8 +40,5 @@
         "ytdl": "^1.4.1",
         "ytdl-core": "^4.11.5",
         "ytsr": "^3.8.4"
-    },
-    "devDependencies": {
-        "typescript": "^5.2.2"
     }
 }
