--- a/tsconfig.json
+++ b/tsconfig.json
@@ -106,6 +106,6 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "include":["typings/input/Flutterbot.ts"]
+  "include":["typings/input/utilities.ts"]
 
 }
