--- a/package.json
+++ b/package.json
@@ -5,11 +5,19 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
+        "lint": "prettier --check . && tslint typings/index.d.ts && eslint src --format=pretty",
         "initialize": "node registerSlashCommands.js",
         "start": "node index.js"
     },
     "keywords": [
-        "fart"
+        "Fluttershy",
+        "fluttershy",
+        "My Little Pony",
+        "Brony",
+        "brony",
+        "Discord",
+        "discord",
+        "fun", "utility","bot"
     ],
     "author": "Eli Reynolds",
     "license": "ISC",
@@ -42,6 +50,9 @@
         "ytsr": "^3.8.4"
     },
     "devDependencies": {
-        "@types/express": "^4.17.19"
-    }
+        "typescript": "^5.1.6"
+    },
+    "types": "types/index.d.ts",
+    "type": "commonjs"
+   
 }
