--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,10 +33,10 @@
     // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
      "typeRoots": ["types"],                                  /* Specify multiple folders that act like './node_modules/@types'. */
-     "types": ["client/Flutterbot", "guardianAngel/evaluator",
-               "utils/exp", "utils/ExpHandler","utils/LockBox",
-               "utils/SimpleDatabase","utils/types","utils/utilities",
-               "utils/help"],                                     /* Specify type package names to be included without being referenced in a source file. */
+     //"types": ["client/Flutterbot", "guardianAngel/evaluator",
+    //           "utils/exp", "utils/ExpHandler","utils/LockBox",
+   //            "utils/SimpleDatabase","utils/types","utils/utilities",
+    //           "utils/help"],                                     /* Specify type package names to be included without being referenced in a source file. */
     // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
     // "moduleSuffixes": [],                             /* List of file name suffixes to search when resolving a module. */
     // "allowImportingTsExtensions": true,               /* Allow imports to include TypeScript file extensions. Requires '--moduleResolution bundler' and either '--noEmit' or '--emitDeclarationOnly' to be set. */
@@ -64,7 +64,7 @@
      //"exclude":["./types"],                               /* Specify an output folder for all emitted files. */
     // "removeComments": true,                           /* Disable emitting comments. */
     // "noEmit": true,                                   /* Disable emitting files from a compilation. */
-     "importHelpers": true,                            /* Allow importing helper functions from tslib once per project, instead of including them per-file. */
+   //  "importHelpers": true,                            /* Allow importing helper functions from tslib once per project, instead of including them per-file. */
     // "importsNotUsedAsValues": "remove",               /* Specify emit/checking behavior for imports that are only used for types. */
     // "downlevelIteration": true,                       /* Emit more compliant, but verbose and less performant JavaScript for iteration. */
     // "sourceRoot": "",                                 /* Specify the root path for debuggers to find the reference source code. */
@@ -112,6 +112,6 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "include":["registerSlashCommands.js"]
+  //"include":["registerSlashCommands.js"]
 
 }
