--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
         "brony",
         "Discord",
         "discord",
-        "fun", "utility","bot"
+        "fun",
+        "utility",
+        "bot"
     ],
     "author": "Eli Reynolds",
     "license": "ISC",
@@ -29,7 +31,7 @@
         "@distube/ytdl-core": "^4.13.1",
         "axios": "^0.23.0",
         "body-parser": "^1.20.2",
-        "canvass": "^0.1.0",
+        "canvas": "^2.11.2",
         "cheerio": "^1.0.0-rc.12",
         "chrono-node": "^2.6.5",
         "crypto": "^1.0.1",
@@ -54,5 +56,4 @@
     },
     "types": "types/index.d.ts",
     "type": "commonjs"
-   
 }
